Committing the initial migration changes.

--- a/HotelListingAPI/appsettings.json
+++ b/HotelListingAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "HotelListingDbConnection": "Server=(localdb)\\mssqllocaldb;Database=HotelListingDb;Trusted_Connection=True;MultipleActiveResultSets=True;"
+  },
   "SeriLog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -9,12 +12,11 @@
     },
     "WriteTo": [
       {
-      "Name":"File",
-      "Args":
-      {
-        "path": "./logs/log-.txt",
-        "rollingInterval": "Day"
-      }
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-.txt",
+          "rollingInterval": "Day"
+        }
       },
       {
         "Name": "Seq",
@@ -22,6 +24,6 @@
         "Args": { "serverUrl": "http://localhost:5341" }
       }
     ]
-    },
+  },
   "AllowedHosts": "*"
 }
