Adding code changes for login and authorization

--- a/HotelListingAPI/appsettings.json
+++ b/HotelListingAPI/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "HotelListingDbConnection": "Server=(localdb)\\mssqllocaldb;Database=HotelListingDb;Trusted_Connection=True;MultipleActiveResultSets=True;"
   },
+  "JWTSettings": {
+    "Issuer": "HotelListingAPI",
+    "Audience": "HotelListingAPIClient",
+    "DurationInMinutes": "10",
+    "Key": "SuryasAshwanthSatizSuperSecretKey"
+  },
   "SeriLog": {
     "MinimumLevel": {
       "Default": "Information",
