Made changes for API Versioning for countries controller. Now countries controller will have two versions, where version 1 is deprecated.

--- a/HotelListingAPI/HotelListingAPI.csproj
+++ b/HotelListingAPI/HotelListingAPI.csproj
@@ -22,6 +22,8 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.35.0" />
+    <PackageReference Include="Microsoft.AspNetCore.MVC.Versioning" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.MVC.Versioning.APIExplorer" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
